--- a/GameLoop/GameLoop.csproj
+++ b/GameLoop/GameLoop.csproj
@@ -59,15 +59,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CharacterData.cs" />
+    <Compile Include="CharacterSprite.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="DrawSpriteState.cs" />
     <Compile Include="FastLoop.cs" />
+    <Compile Include="Font.cs" />
+    <Compile Include="FontParser.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FramesTestState.cs" />
     <Compile Include="IGameObject.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="PreciseTimer.cs" />
@@ -76,6 +81,8 @@
     <Compile Include="renderer.cs" />
     <Compile Include="sprite.cs" />
     <Compile Include="StateSystem.cs" />
+    <Compile Include="Text.cs" />
+    <Compile Include="TextRenderState.cs" />
     <Compile Include="TextTestState.cs" />
     <Compile Include="Texture.cs" />
     <Compile Include="TextureManager.cs" />
@@ -92,6 +99,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="font.fnt" />
     <None Include="font.tga" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
