--- a/GameLoop/GameLoop.csproj
+++ b/GameLoop/GameLoop.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Batch.cs" />
     <Compile Include="CharacterData.cs" />
     <Compile Include="CharacterSprite.cs" />
     <Compile Include="Color.cs" />
