--- a/GameLoop/GameLoop.csproj
+++ b/GameLoop/GameLoop.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Batch.cs" />
     <Compile Include="CharacterData.cs" />
     <Compile Include="CharacterSprite.cs" />
+    <Compile Include="Circle.cs" />
+    <Compile Include="CircleIntersectionState.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="DrawSpriteState.cs" />
     <Compile Include="FastLoop.cs" />
@@ -81,6 +83,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="renderer.cs" />
+    <Compile Include="SpecialEffectState.cs" />
     <Compile Include="sprite.cs" />
     <Compile Include="StateSystem.cs" />
     <Compile Include="Text.cs" />
@@ -90,6 +93,7 @@
     <Compile Include="TextureManager.cs" />
     <Compile Include="TextWrapTest.cs" />
     <Compile Include="Vector.cs" />
+    <Compile Include="WaveformGraphics.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
